Remove accidental usage of Map method added in JDK9.